<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/itemListFragment">

    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.example.inventory.ItemListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/item_list_fragment">
        <action
            android:id="@+id/action_itemListFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment" />
        <action
            android:id="@+id/action_itemListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.example.inventory.ItemDetailFragment"
        android:label="@string/item_detail_fragment_title"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="item_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_itemDetailFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.example.inventory.AddItemFragment"
        android:label="@string/add_fragment_title"
        tools:layout="@layout/fragment_add_item">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="item_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_addItemFragment_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:popUpTo="@id/itemListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_addItemFragment_to_cameraScannerFragment"
            app:destination="@id/cameraScannerFragment"
            app:popUpTo="@id/cameraScannerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/cameraScannerFragment"
        android:name="com.example.inventory.CameraScannerFragment"
        android:label="fragment_camera_scanner"
        tools:layout="@layout/fragment_camera_scanner" >
        <action
            android:id="@+id/action_cameraScannerFragment_to_addItemFragment"
            app:destination="@id/addItemFragment"
            app:popUpTo="@id/addItemFragment" />
    </fragment>
</navigation>
